bindings/go/ffi/slatedb.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
void* uniffi_slatedb_ffi_fn_constructor_ffisettings_from_json_string(RustBuffer json, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffisettings_load(RustCallStatus *out_status
    
);
void uniffi_slatedb_ffi_fn_method_ffisettings_set(void* ptr, RustBuffer key, RustBuffer value_json, RustCallStatus *out_status
);
RustBuffer uniffi_slatedb_ffi_fn_method_ffisettings_to_json_string(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffiwalfile(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffiwalfile(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffiwalfile_id(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffiwalfile_iterator(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_ffiwalfile_metadata(void* ptr
);
void* uniffi_slatedb_ffi_fn_method_ffiwalfile_next_file(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffiwalfile_next_id(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffiwalfile_shutdown(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffiwalfileiterator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffiwalfileiterator(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffiwalfileiterator_next(void* ptr
);
void uniffi_slatedb_ffi_fn_method_ffiwalfileiterator_shutdown(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffiwalreader(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffiwalreader(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffiwalreader_new(RustBuffer path, void* object_store, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_method_ffiwalreader_get(void* ptr, uint64_t id, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffiwalreader_list(void* ptr, RustBuffer start_id, RustBuffer end_id
);
void uniffi_slatedb_ffi_fn_method_ffiwalreader_shutdown(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffiwritebatch(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffiwritebatch(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffiwritebatch_new(RustCallStatus *out_status
    
);
void uniffi_slatedb_ffi_fn_method_ffiwritebatch_delete(void* ptr, RustBuffer key, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffiwritebatch_merge(void* ptr, RustBuffer key, RustBuffer operand, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffiwritebatch_merge_with_options(void* ptr, RustBuffer key, RustBuffer operand, RustBuffer options, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffiwritebatch_put(void* ptr, RustBuffer key, RustBuffer value, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffiwritebatch_put_with_options(void* ptr, RustBuffer key, RustBuffer value, RustBuffer options, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_func_ffi_init_logging(RustBuffer level, RustBuffer callback, RustCallStatus *out_status
);
RustBuffer ffi_slatedb_ffi_rustbuffer_alloc(uint64_t size, RustCallStatus *out_status
);
RustBuffer ffi_slatedb_ffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rustbuffer_free(RustBuffer buf, RustCallStatus *out_status
);
RustBuffer ffi_slatedb_ffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_slatedb_ffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_slatedb_ffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_slatedb_ffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_slatedb_ffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_slatedb_ffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_slatedb_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *out_status
);