bindings/python/src/slatedb/ffi/slatedb.py

_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_from_json_string.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_from_json_string.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_load.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_load.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffisettings_set.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffisettings_set.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffisettings_to_json_string.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffisettings_to_json_string.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiwalfile.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiwalfile.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiwalfile.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiwalfile.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_id.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_id.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_iterator.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_iterator.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_metadata.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_metadata.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_next_file.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_next_file.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_next_id.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_next_id.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_shutdown.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfile_shutdown.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiwalfileiterator.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiwalfileiterator.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiwalfileiterator.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiwalfileiterator.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfileiterator_next.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfileiterator_next.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfileiterator_shutdown.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalfileiterator_shutdown.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiwalreader.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiwalreader.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiwalreader.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiwalreader.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffiwalreader_new.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffiwalreader_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalreader_get.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalreader_get.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalreader_list.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalreader_list.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalreader_shutdown.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwalreader_shutdown.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiwritebatch.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiwritebatch.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiwritebatch.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiwritebatch.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffiwritebatch_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffiwritebatch_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_delete.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_delete.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_merge.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_merge.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_merge_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_merge_with_options.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_put.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_put.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_put_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffiwritebatch_put_with_options.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_func_ffi_init_logging.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_func_ffi_init_logging.restype = None
_UniffiLib.ffi_slatedb_ffi_rustbuffer_alloc.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_slatedb_ffi_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_slatedb_ffi_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rustbuffer_free.restype = None
_UniffiLib.ffi_slatedb_ffi_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rustbuffer_reserve.restype = _UniffiRustBuffer
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_u8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_u8.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_u8.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_u8.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_u8.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_u8.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_u8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_i8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_i8.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_i8.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_i8.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_i8.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_i8.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_i8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_i8.restype = ctypes.c_int8
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_u16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_u16.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_u16.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_u16.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_u16.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_u16.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_u16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_i16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_i16.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_i16.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_i16.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_i16.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_i16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_u32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_u32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_u32.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_u32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_u32.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_u32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_u32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_u32.restype = ctypes.c_uint32
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_i32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_i32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_i32.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_i32.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_i32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_i32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
